# flypi

./: .cursorrules  .gitignore  README.md  a4_Test.py  base_chat.py  circuit_schema.json  pyproject.toml  requirements.txt  run.py  run_curl.sh  run_request.py  sample_circuit.json  schema_models.py
app/: main.py  schema_models.py
app/api/endpoints/: __init__.py  circuit.py  (+3 more)
app/api_schemas/: __init__.py  components.py  image_requests.py  image_responses.py
app/core/: component_config.py  config.py  exceptions.py
app/prompt_schemas/: circuit_location_schema.py  circuit_schema.py  component_presence_schema.py  component_schema.py  connection_schema.py
app/schema_models/: circuit_schema.py  component_presence_schema.py  component_schema.py  connection_schema.py
app/schemas/: circuit.py
app/services/: circuit_service.py  component_identifier_service.py  connection_identifier_service.py  detector_service.py  groq_client.py  groq_service.py  image_decoder.py  image_validation.py  llm_client.py  sheet_detector_service.py
legacy/: grog_service.py  run_requests.py  schema_models.py
tests/: conftest.py  test_circuit_schema.py  test_component_identifier_service.py  test_connection_identifier_service.py  test_detector_service.py
tests/api/: test_circuit.py  test_circuit_components.py  test_circuit_schema.py  test_circuit_v0.py
tests/benchmarks/: circuit_components_benchmark.py  circuit_connections_benchmark.py  sheet_detector_benchmark.py
tests/services/: test_component_identifier_service.py  test_connection_identifier_service.py  test_sheet_detector_service.py
(+18 files in other folders)
